--- a/src/main/resources/templates/upload-file.html
+++ b/src/main/resources/templates/upload-file.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <!--<link rel="stylesheet" href="css/style.css" type="text/css" media="all"/>-->
-    <link rel="stylesheet" href="form.css">
+    <!--<link rel="stylesheet" href="templates.css/style.templates.css" type="text/templates.css" media="all"/>-->
+    <link rel="stylesheet" href="form.css"/>
     <title>WebEngine</title>
 </head>
 <body>
